[project]
name = "qinglong"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "moxiaoying", email = "768091671@qq.com"},
]
dependencies = [
    "requests~=2.31.0",
    "beautifulsoup4~=4.12.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
